--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <title>Meteora</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <!-- link para incluir os ícones do bootstrap no projeto, este metódo abaixo é via cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,6 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Promoção</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sacola.html">Sacola</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <!-- para os leitores de tela, o conteúdo do aria label será falado para eles, por isso é importante deixa-los explicativos e em português (como peguei do bootstrap, ele estava em inglês (search)) -->
@@ -80,14 +84,14 @@
                 <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner1-desktop.png"
                     alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
             </div>
-            <div class="carousel-item position-relative">
+            <div class="carousel-item">
                 <img class="w-100 img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png"
                     alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
                 <img class="w-100 img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png"
                     alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
                 <img class="w-100 img-fluid d-none d-xl-block" src="./assets/Desktop/banner2-desktop.png"
                     alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
-                <div class="carousel-caption position-absolute posicao">
+                <div class="carousel-caption">
                     <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
                     <p class="fs-4">Estilo e qualidade para durar.</p>
                 </div>
@@ -132,109 +136,108 @@
         <!-- col-md-4 atinge telas de tablets, onde, quero que cada card ocupe 4 colunas (como são 12, 3 cards = 12 colunas) -->
         <!-- col-xxl-2 refere-se a telas de monitores e quero que neles todos os cards fiquem na mesma linha, ou seja, quero que cada card ocupe 2 colunas, aqui tenho 6 cards, logo: 6 * 2 = 12 (assim ocupando fazendo que todos os cards ocupem as colunas de apenas uma linha)-->
         <div class="col-6 col-md-4 col-xxl-2">
-            <div class="h-100 card rounded-0 border-none">
-                <!-- ? de telas md para cima não aparece, apenas para sm para baixo (ou seja, telas de celulares) -->
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
-                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
-                <!-- ? por padrão não aparece, porém aparece em telas md e em telas xl não -->
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
-                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
-                <!-- ? por padrão não aparece, porém aparece em telas xl -->
-                <img class="h-100 d-none d-xl-block" src="./assets/Mobile/categorias/categoria-camiseta.png"
-                    alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
-                <!-- ? card text é adicionado para ajustar o texto dentro do card, ficando "mais bonito visualmente" através de espaçamentos extras, da impressão de estar mais organizado no card e se alinha com o estilo padrão de cards do bootstrap (além é claro, de remover aquele espaçamento ridículo que toda tag "p" possui no bootstrap) -->
-                <!-- ? text-bg-dark deixa a cor dos textos em branco também (acredito que a função dessa classe é fazer com que os textos filhos tenham a cor branca por saberem que o bg é escuro, onde, não faria sentido text-bg-dark deixar escuro também sendo que o fundo da div já é escuro, loucura né?) -->
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Camisetas</p>
+            <a href="camisetas.html">
+                <div class="card rounded-0 border-0">
+                    <!-- ? de telas md para cima não aparece, apenas para sm para baixo (ou seja, telas de celulares) -->
+                    <img class="d-md-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                        alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                    <!-- ? por padrão não aparece, porém aparece em telas md e em telas xl não -->
+                    <img class="d-md-none d-md-block d-xl-none" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                        alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                    <!-- ? por padrão não aparece, porém aparece em telas xl -->
+                    <img class="d-md-none d-xl-block" src="./assets/Mobile/categorias/categoria-camiseta.png"
+                        alt="Camiseta masculina de manga na cor verde, com bolso e detalhe em vermelho.">
+                    <!-- ? card text é adicionado para ajustar o texto dentro do card, ficando "mais bonito visualmente" através de espaçamentos extras, da impressão de estar mais organizado no card e se alinha com o estilo padrão de cards do bootstrap (além é claro, de remover aquele espaçamento ridículo que toda tag "p" possui no bootstrap) -->
+                    <!-- ? text-bg-dark deixa a cor dos textos em branco também (acredito que a função dessa classe é fazer com que os textos filhos tenham a cor branca por saberem que o bg é escuro, onde, não faria sentido text-bg-dark deixar escuro também sendo que o fundo da div já é escuro, loucura né?) -->
+                    <div class="card-header bg-black text-bg-dark">
+                        <p class="text-center card-text">Camisetas</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="col-6 col-md-4 col-xxl-2">
-            <div class="h-100 card rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-bolsas.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png"
-                    alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Bolsas</p>
+            <a href="bolsas.html">
+                <div class="card h-100 rounded-0 border-0">
+                    <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-bolsas.png"
+                        alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
+                    <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-bolsas.png"
+                        alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
+                    <img class="d-none h-100 d-xl-block" src="./assets/Desktop/categorias/categoria-bolsa.png"
+                        alt="Bolsa feminina de couro na cor marrom, com cortes quadrados, e alça dourada em formato de corrente com detalhe verde, em fundo verde limão.">
+                    <div class="card-header bg-black text-bg-dark">
+                        <p class="text-center card-text">
+                            Bolsas
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcados.png"
-                    alt="Par de tênis unissex com cor predominante branca e traços na cores laranja, azul, verde e cadarço vermelho, em fundo verde limão.">
-
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Calçados</p>
+            <a href="calcas.html">
+                <div class="card h-100 rounded-0 border-0">
+                    <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-calcas.png"
+                        alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
+                    <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png"
+                        alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
+                    <img class="d-none h-100 d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png"
+                        alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
+                    <div class="card-header bg-black text-bg-dark">
+                        <p class="text-center card-text">
+                            Calças
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-calcas.png"
-                    alt="Quatro calças jeans dobradas e organizadas uma acima da outra, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Calças</p>
+            <a href="casacos.html">
+                <div class="card h-100 rounded-0 border-0">
+                    <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-casacos.png"
+                        alt="Casaco masculino na cor marrom em fundo verde limão.">
+                    <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png"
+                        alt="Casaco masculino na cor marrom em fundo verde limão.">
+                    <img class="d-none h-100 d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png"
+                        alt="Casaco masculino na cor marrom em fundo verde limão.">
+                    <div class="card-header bg-black text-bg-dark">
+                        <p class="text-center card-text">
+                            Casacos
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
 
         <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-casacos.png"
-                    alt="Casaco masculino na cor marrom em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Casacos</p>
+            <a href="oculos.html">
+                <div class="card h-100 rounded-0 border-0">
+                    <img class="d-md-none d-block" src="./assets/Mobile/categorias/categoria-oculos.png"
+                        alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
+                    <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png"
+                        alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
+                    <img class="d-none h-100 d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png"
+                        alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
+                    <div class="card-header bg-black text-bg-dark">
+                        <p class="text-center card-text">
+                            Óculos
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="col-6 col-md-4 col-xxl-2">
-            <div class="card h-100 rounded-0 border-none">
-                <img class="h-100 d-md-none" src="./assets/Mobile/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-
-                <img class="h-100 d-none d-md-block d-xl-none" src="./assets/Tablet/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-
-                <img class="h-100 d-none d-xl-block" src="./assets/Desktop/categorias/categoria-oculos.png"
-                    alt="Óculos de Sol com lentes arredondadas e armação dourada, em fundo verde limão.">
-                <div class="card-header bg-black text-bg-dark">
-                    <p class="text-center card-text">Óculos</p>
-                </div>
-            </div>
+            </a>
         </div>
 
     </div>
 
     <!-- container para ajustar em telas menores -->
     <h2 class="container text-center my-3 my-md-5">Produtos que estão bombando!</h2>
+
+    <!-- <div class="container row mx-auto" id="produtos">
+
+
+
+    </div> -->
 
     <!-- deixando da forma que instrutor ensinou, porém (e também acho melhor) é possível resolver isso utilizando gap-4 apenas na div pai das colunas ao inves de pb-4 -->
     <!-- um motivo para ele ter usado pb-4 é porque o gap da um espaçamento em todos os lados do card, onde nesta situação, onde para celular é não é necessário utilizar um espaçamento do lado pois fica um em cada linha, é melhor ter apenas o espaçamento onde necessário (no caso, embaixo) -->
